stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_occurs_check_lambda_self_apply.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/occurs_check_lambda_self_apply.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × recursive type inferred
   ╭─[tests/fixtures/diagnostics/types/occurs_check_lambda_self_apply.ml:2:32]
 1 │ fn main() {
 2 │   let self_apply = fn(value) { value(value) };
   ·                                ──────┬─────
   ·                                      ╰── this expression would require a value to have a type that contains itself
 3 │   println("unreachable")
   ╰────
  help: avoid applying a value to itself or add an explicit non-recursive
        function type boundary
