stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_record_field_access_unknown.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/record_field_access_unknown.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unknown record field
   ╭─[tests/fixtures/diagnostics/types/record_field_access_unknown.ml:5:7]
 4 │   let p = point { x: 1, y: 2 };
 5 │   dbg(p.z)
   ·       ─┬─
   ·        ╰── `point` has no field named `z`
 6 │ }
   ╰────
  help: use one of the fields declared on the record type
