stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_record_missing_field.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/record_missing_field.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × missing record field
   ╭─[tests/fixtures/diagnostics/types/record_missing_field.ml:4:7]
 3 │ fn main() {
 4 │   dbg(point { x: 1 })
   ·       ───────┬──────
   ·              ╰── `point` requires field `y`
 5 │ }
   ╰────
  help: initialize every field declared on the record type
