stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_record_pattern_duplicate_field.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/record_pattern_duplicate_field.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × duplicate record pattern field
   ╭─[tests/fixtures/diagnostics/types/record_pattern_duplicate_field.ml:6:19]
 5 │   dbg(match value {
 6 │     point { x, x: again } -> again,
   ·                   ──┬──
   ·                     ╰── field `x` appears more than once in `point`
 7 │     _ -> 0
   ╰────
  help: keep one pattern for each matched field
