stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_tuple_pattern_arity.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/tuple_pattern_arity.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × tuple pattern arity mismatch
   ╭─[tests/fixtures/diagnostics/types/tuple_pattern_arity.ml:4:5]
 3 │   dbg(match value {
 4 │     (left, middle, right) -> left,
   ·     ──────────┬──────────
   ·               ╰── matched tuple has 2 item(s), but this pattern has 3
 5 │     _ -> 0
   ╰────
  help: match the tuple with the same number of item patterns
